# StripePR

./: README.md  docker-compose.yml  l_docker-compose.yml
backend/: Dockerfile  pyproject.toml  pytest.ini
backend/config/: settings.py
backend/item/: models.py  urls.py  views.py
backend/item/migrations/: 0001_initial.py  0002_alter_item_price.py
backend/templates/: landing.html
backend/tests/: test_urls.py  test_views.py
backend/tests/fixtures/: item_fixture.py
nginx/: nginx.conf
